# upversion

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: api-custom-response.rs  api.rs  custom-template.rs  github.rs
src/: context.rs  data.rs  lib.rs  template.rs
src/snapshots/: upversion__template__template__can_render.snap  upversion__template__template__can_render_error.snap  upversion__template__test_template__can_render.snap  upversion__template__test_template__can_render_error.snap
src/vendors/: api.rs  github.rs  mod.rs
src/vendors/snapshots/: upversion__vendors__api__state_context__can_get_release_details.snap  upversion__vendors__api__state_context__can_get_release_details_with_timeout.snap  upversion__vendors__api__state_context__can_get_value_with_error-2.snap  upversion__vendors__api__state_context__can_get_value_with_error.snap  upversion__vendors__api__vendor_api_test__can_get_release_details.snap  upversion__vendors__api__vendor_api_test__can_get_release_details_with_timeout.snap  upversion__vendors__api__vendor_api_test__can_get_value_with_error.snap  upversion__vendors__github__vendor_github_github__can_get_release_details.snap  upversion__vendors__github__vendor_github_github__can_get_release_details_without_releases.snap
xtask/src/: main.rs
