[package]
name = "upversion"
description = ""
version = "0.1.0"
edition = "2021"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rusty-ferris-club/upversion"
homepage = "https://github.com/rusty-ferris-club/upversion"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.17"
env_logger="0.9.0"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"

[dependencies.tera]
version = "1"
default-features = false