[package]
name = "upversion"
description = "provides you to notify your clients when new version released"
version = "0.1.0"
edition = "2021"
authors = ["Elad-Kaplan <kaplan.elad@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rusty-ferris-club/upversion"
homepage = "https://github.com/rusty-ferris-club/upversion"
documentation = "https://docs.rs/upversion"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log="0.4.17"
env_logger="0.9.0"
anyhow = "1"
curl = "0.4.43"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"

[dependencies.tera]
version = "1"
default-features = false

[dev-dependencies]
insta = { version = "1", features = ["backtrace"] }
mockito = "0.31"

[workspace]
members = ["xtask"]